policies/cilium/allow-doki-data-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-postgresql-ingress
  namespace: doki-data
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: doki-stack
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-minio-ingress
  namespace: doki-data
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: minio
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: doki-stack
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-qdrant-ingress
  namespace: doki-data
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qdrant
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: doki-stack
      toPorts:
        - ports:
            - port: "6333"
              protocol: TCP
            - port: "6334"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-dragonfly-ingress
  namespace: doki-data
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: dragonfly
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: doki-stack
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-rabbitmq-ingress
  namespace: doki-data
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: doki-stack
      toPorts:
        - ports:
            - port: "5672"
              protocol: TCP
